Add SQLite JDBC driver

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
             <version>1.8.0-beta2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.21.0.1</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
