--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.htwsaar.prog3</groupId>
-    <artifactId>autoverwaltung</artifactId>
+    <artifactId>car-rental</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
