--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <artifactId>car-rental</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <name>Car Rental</name>
+    <description>
+        Student project as part of the Programming 3 lecture at the
+        University of Applied Sciences in Saarbrücken.
+    </description>
+    <url>https://github.com/akelsch/car-rental</url>
+    <inceptionYear>2018</inceptionYear>
+
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
