Fixed a bug where window didn't stay maximized while changing views

--- a/src/main/resources/bundles/strings.properties
+++ b/src/main/resources/bundles/strings.properties
@@ -11,3 +11,5 @@ new-employee-view-fxml=/fxml/NewEmployeeView.fxml
 edit-employee-view-fxml=/fxml/EditEmployeeView.fxml
 
 rental-table-view-fxml=/fxml/RentalTableView.fxml
+
+root-view-fxml=/fxml/RootView.fxml
