Fix non compiling code and adjust name schema

--- a/src/main/resources/bundles/strings.properties
+++ b/src/main/resources/bundles/strings.properties
@@ -8,3 +8,4 @@ employee-table-view-fxml=/fxml/EmployeeTableView.fxml
 employee-edit-view-fxml=/fxml/EmployeeEditView.fxml
 
 rental-table-view-fxml=/fxml/RentalTableView.fxml
+rental-edit-view-fxml=/fxml/RentalEditView.fxml
