--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <hsqldb.version>2.4.1</hsqldb.version>
         <lombok.version>1.18.2</lombok.version>
         <hamcrest.version>1.3</hamcrest.version>
-        <junit.version>5.3.0</junit.version>
+        <junit.version>5.3.1</junit.version>
         <mockito.version>2.22.0</mockito.version>
     </properties>
 
@@ -94,7 +94,7 @@
                         <configuration>
                             <rules>
                                 <requireMavenVersion>
-                                    <version>3.0.5</version>
+                                    <version>3.1.1</version>
                                 </requireMavenVersion>
                             </rules>
                         </configuration>
@@ -104,6 +104,11 @@
         </plugins>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>com.github.spotbugs</groupId>
+                    <artifactId>spotbugs-maven-plugin</artifactId>
+                    <version>3.1.6</version>
+                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
@@ -194,6 +199,17 @@
 
     <reporting>
         <plugins>
+            <plugin>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>spotbugs</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
