--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
             <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
+   		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
+		</dependency>
     </dependencies>
 
     <build>
@@ -268,6 +274,29 @@
                     </reportSet>
                 </reportSets>
             </plugin>
+            			<plugin>
+				<groupId>
+  				org.codehaus.mojo
+  			</groupId>
+				<artifactId>
+  				taglist-maven-plugin
+  			</artifactId>
+				<configuration>
+					<tagListOptions>
+						<tagClasses>
+							<tagClass>
+								<displayName>Kommentare Olbertz</displayName>
+								<tags>
+									<tag>
+										<matchString>OLBERTZ</matchString>
+										<matchType>ignoreCase</matchType>
+									</tag>
+								</tags>
+							</tagClass>
+						</tagClasses>
+					</tagListOptions>
+				</configuration>
+			</plugin>
         </plugins>
     </reporting>
 </project>
