--- a/pom.xml
+++ b/pom.xml
@@ -16,14 +16,14 @@
     <inceptionYear>2018</inceptionYear>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>15</maven.compiler.source>
+        <maven.compiler.target>15</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <logback.version>1.2.3</logback.version>
-        <hibernate.version>5.3.6.Final</hibernate.version>
+        <hibernate.version>5.4.23.Final</hibernate.version>
         <hsqldb.version>2.4.1</hsqldb.version>
-        <lombok.version>1.18.2</lombok.version>
+        <lombok.version>1.18.16</lombok.version>
         <hamcrest.version>1.3</hamcrest.version>
         <junit.version>5.3.1</junit.version>
         <mockito.version>2.22.0</mockito.version>
@@ -51,12 +51,17 @@
             <artifactId>hsqldb</artifactId>
             <version>${hsqldb.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>15.0.1</version>
+        </dependency>
         <!-- Provided -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
-            <scope>provided</scope>
+<!--            <scope>provided</scope>-->
         </dependency>
         <!-- Test -->
         <dependency>
