--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <!-- Sonar -->
+        <sonar.projectKey>akelsch_car-rental</sonar.projectKey>
+        <sonar.organization>akelsch</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <!-- Dependency Versions -->
         <logback.version>1.2.3</logback.version>
         <hibernate.version>5.4.24.Final</hibernate.version>
