Replace HSQLDB with H2, redo application routing

--- a/pom.xml
+++ b/pom.xml
@@ -52,14 +52,9 @@
             <optional>true</optional>
         </dependency>
         <!-- Runtime -->
-<!--        <dependency>-->
-<!--            <groupId>com.h2database</groupId>-->
-<!--            <artifactId>h2</artifactId>-->
-<!--            <scope>runtime</scope>-->
-<!--        </dependency>-->
         <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
         <!-- Test -->
