--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.datasource.url=jdbc:hsqldb:file:db/production;shutdown=true;hsqldb.write_delay=false
-logging.level.org.hibernate.SQL=DEBUG
+spring.data.jpa.repositories.bootstrap-mode=default
+#logging.level.org.hibernate.SQL=DEBUG
