--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.profiles.active=fxml
-
+spring.messages.basename=i18n.labels,i18n.messages
 spring.data.jpa.repositories.bootstrap-mode=default
 #logging.level.org.hibernate.SQL=DEBUG
