--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.0</version>
+        <version>2.4.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -15,22 +15,17 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <name>Car Rental</name>
-    <description>
-        Student project as part of the Programming 3 lecture at the
-        University of Applied Sciences in Saarbrücken.
-    </description>
+    <description>Car Rental JavaFX desktop application powered by Spring</description>
     <url>https://github.com/akelsch/car-rental</url>
     <inceptionYear>2018</inceptionYear>
 
     <properties>
         <java.version>15</java.version>
         <javafx.version>15.0.1</javafx.version>
-
         <!-- Sonar -->
         <sonar.projectKey>akelsch_car-rental</sonar.projectKey>
         <sonar.organization>akelsch</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-
         <!-- Plugins -->
         <jacoco-maven-plugin.version>0.8.6</jacoco-maven-plugin.version>
     </properties>
