--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <properties>
         <java.version>15</java.version>
         <javafx.version>15.0.1</javafx.version>
+        <javafaker.version>1.0.2</javafaker.version>
         <!-- Sonar -->
         <sonar.projectKey>akelsch_car-rental</sonar.projectKey>
         <sonar.organization>akelsch</sonar.organization>
@@ -48,6 +49,11 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>${javafaker.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
