--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <sonar.projectKey>akelsch_car-rental</sonar.projectKey>
         <sonar.organization>akelsch</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.tests>${project.build.testSourceDirectory},${project.basedir}/src/it/java</sonar.tests>
         <!-- Dependencies -->
         <javafaker.version>1.0.2</javafaker.version>
         <testfx.version>4.0.16-alpha</testfx.version>
