--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.junit.reportPaths>${project.build.directory}/surefire-reports,${project.build.directory}/failsafe-reports</sonar.junit.reportPaths>
         <!-- Tests -->
+        <reuseForks>false</reuseForks>
         <tests.testfx.headless>true</tests.testfx.headless>
         <tests.prism.verbose>true</tests.prism.verbose>
         <tests.prism.order>sw</tests.prism.order>
