--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.profiles.include=fxml
 spring.messages.basename=i18n.labels,i18n.messages
+spring.datasource.url=jdbc:h2:mem:rentaldb;NON_KEYWORDS=YEAR,END
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
